# geoportal-publicacion

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: capa-nueva.yml  error.yml  mantenimiento.yml
.github/workflows/: ci.yml
checksums/: SHA256SUMS-mocupp-cafe.txt  SHA256SUMS-mocupp-musaceas.txt  SHA256SUMS-mocupp-pastos.txt
config/: esquema-nodo.json  global.yml
config/nodos/: _plantilla.yml  mocupp-cafe.yml  mocupp-musaceas.yml  mocupp-pastos.yml
docs/: README.md  correcciones-snit.md  crs.md  flujo-publicacion.md  geonode.md  mantenimiento.md  nodo-snit.md  pendientes.md  recuperacion-desastres.md
docs/historico/: formulario_snit_mocupp_cafe.txt  formulario_snit_mocupp_musaceas.txt  formulario_snit_mocupp_pastos.txt  mantenimiento_mocupp_pastos_20260720.txt  publicar_mocupp_cafe.txt  publicar_mocupp_musaceas.txt  publicar_mocupp_pastos.txt  publicar_mocupp_pastos_nacionales.txt  reemplazar_capa_musaceas.txt  renombrado-metadatos.md  reorganizacion-2026-07.md
metadatos/mocupp-cafe/1-borrador/: perdida_cobertura_arborea.docx
metadatos/mocupp-cafe/3-actual/: cultivo_cafe_2021.xml  (+3 more)
src/geopub/: __init__.py  cli.py  config.py  crs.py  geonode.py  geoserver.py  release.py  servidor.py  transformar.py  vista_previa.py
tests/: conftest.py  test_config.py  test_crs.py  test_geoserver.py  test_metadatos.py  test_release.py  test_servidor.py
tests/fixtures/: nodo-prueba.yml  plantilla-minima.xml
(+71 files in other folders)
