[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geopub"
version = "0.1.0"
description = "Herramientas de publicación de capas geoespaciales de la Escuela de Geografía (UCR) en el SNIT y el geoportal institucional"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Escuela de Geografía, Universidad de Costa Rica" },
]
# GDAL, geopandas y matplotlib se instalan vía conda (ver environment.yml);
# aquí solo van dependencias instalables con pip puro.
dependencies = [
  "typer>=0.12",
  "pyyaml>=6.0",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "lxml>=5.0",
  "openpyxl>=3.1",
  "jsonschema>=4.21",
]

[project.scripts]
geopub = "geopub.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"geopub.metadatos" = ["plantillas/*.xml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
